<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Storage"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/woman" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/blueCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/ocean_blue"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:padding="1dp">

            <ImageView
                android:id="@+id/im1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:src="@drawable/folder" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Available space"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"

        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/blueCard">

        <TextView
            android:id="@+id/stv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="YOUR FOLDERS"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/stv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="140dp"
            android:padding="1dp"
            android:text="See more"
            android:textColor="@color/gray" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardlayout"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <androidx.cardview.widget.CardView
            android:id="@+id/white1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:cardBackgroundColor="@color/off_white"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            android:layout_marginTop="16dp">


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintStart_toEndOf="@id/white1"
                app:layout_constraintTop_toBottomOf="@id/white1">


                <ImageView
                    android:id="@+id/subimg1"
                    android:layout_width="52dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="1dp"
                    android:padding="12dp"
                    android:src="@drawable/diamond" />

                <TextView
                    android:id="@+id/sub1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="1dp"
                    android:text="UI Designs"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sub2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="1dp"
                    android:text="@string/text3"
                    android:textColor="@color/gray"
                    android:textSize="10sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/white2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            app:cardBackgroundColor="@color/off_white"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp"
            android:layout_marginTop="16dp">


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintStart_toEndOf="@id/white2"
                app:layout_constraintTop_toBottomOf="@id/white2">

                <ImageView
                    android:id="@+id/subimg2"
                    android:layout_width="52dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="1dp"
                    android:padding="12dp"
                    android:src="@drawable/video" />

                <TextView
                    android:id="@+id/sub3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="1dp"
                    android:text="Videos"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sub4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="1dp"
                    android:text="@string/text1"
                    android:textColor="@color/gray"
                    android:textSize="10sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <TextView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text4"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/cardlayout" />

    <LinearLayout

        android:id="@+id/profiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/main">

        <androidx.cardview.widget.CardView

            android:id="@+id/profile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/off_white"
            android:paddingTop="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/prof2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/profile1"
                app:layout_constraintTop_toBottomOf="@id/profile1">

                <ImageView
                    android:id="@+id/pim1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:src="@drawable/user" />

                <TextView
                    android:id="@+id/ptxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/name1"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView

            android:id="@+id/profile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:background="@color/off_white"
            android:paddingTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/prof1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/profile2"
                app:layout_constraintTop_toBottomOf="@id/profile2">

                <ImageView
                    android:id="@+id/pim2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:src="@drawable/profile" />

                <TextView
                    android:id="@+id/ptxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/name2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
