<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:background="@color/sky_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </View>

        <androidx.cardview.widget.CardView
            android:id="@+id/pinkcard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toStartOf="@id/guideline4"

            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/guideline5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="1dp">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="Vaccine\nTogether\nOrphans"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/im1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:src="@drawable/image_white" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_welcm"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underline"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/l1"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/l1"
            app:srcCompat="@drawable/bell" />

        <TextView
            android:layout_width="16dp"

            android:layout_height="16dp"
            android:text="1"
            app:layout_constraintRight_toRightOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView"/>

        <ImageView
            android:id="@+id/dots_IV"
            android:layout_width="80dp"
            android:layout_height="50dp"

            android:src="@drawable/more"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/pinkcard" />

        <TextView
            android:id="@+id/stv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Main Menu"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/dots_IV" />

        <TextView
            android:id="@+id/stv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="See All"
            android:textColor="#FE2C54"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/dots_IV" />

        <androidx.cardview.widget.CardView
            android:id="@+id/sblueCard"
            app:cardBackgroundColor="@color/sky_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintRight_toLeftOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="@id/yellowcard">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/emp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"

                    android:src="@drawable/id">

                </ImageView>




                <TextView
                    android:id="@+id/emptxt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Management"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/emptxt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/yellowcard"
            app:cardBackgroundColor="@color/mango_yellow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"

            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintLeft_toRightOf="@id/guideline6"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/stv2"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/salary"
                    android:layout_width="30dp"
                    android:layout_height="30dp"


                    android:src="@drawable/sack"
                    android:layout_gravity="right">

                </ImageView>



                <TextView
                    android:id="@+id/emptxt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/sal"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/emptxt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Employee"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/pinkcard2"
            app:cardBackgroundColor="@color/orange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintRight_toLeftOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="@id/greencard">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/prg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:src="@drawable/programming">

                </ImageView>


                <TextView
                    android:id="@+id/prgm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Program"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/prgm1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Training"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/greencard"

            app:cardBackgroundColor="#006a4e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"

            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintLeft_toRightOf="@id/guideline6"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/yellowcard"

            >




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/plus"
                    android:layout_gravity="right">

                </ImageView>


                <TextView
                    android:id="@+id/sys1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="System"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sys2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Requirements"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>